Safari layout issues (#2832)
* Fix new experiment view header & page height issues on safari

* Fix graphs start in small size on Safari issue #2555)

--- a/pathmind-webapp/frontend/styles/views/experiment-view.css
+++ b/pathmind-webapp/frontend/styles/views/experiment-view.css
@@ -279,6 +279,11 @@
     z-index: 1;
 }
 
+.experiment-view .bottom-panel histogram-chart,
+.experiment-view .bottom-panel data-chart {
+    flex: 1 0 100%;
+}
+
 .experiment-view.comparison-mode .bottom-panel,
 .experiment-view.comparison-mode .row-2-of-3 vaadin-vertical-layout {
     max-height: none;
